--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-router-dom": "^6.6.1",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.2.2",
     "redux-thunk": "^2.4.2",
     "typescript-plugin-css-modules": "^4.1.1"
   }
