--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@types/react-dom": "^18.0.10",
     "axios": "^1.2.2",
     "ethers": "^5.7.2",
+    "mobx": "^6.7.0",
+    "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
